--- a/Project.ipynb
+++ b/Project.ipynb
@@ -27,8 +27,24 @@
     "\n",
     "ax.set(xlabel='time (s)', ylabel='voltage (mV)',\n",
     "       title='The simplest plot in the world')\n",
-    "ax.grid()"
+    "ax.grid('on')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df726404-a97b-4077-9d5d-1b0396378b01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84e0f2c5-0734-46bb-9a60-6781b1962b29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
